Location Jump Bug

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -11,3 +11,11 @@
 .strike {
   text-decoration: line-through;
 }
+
+.nav,
+.pagination,
+.carousel,
+.panel-title a,
+a {
+  cursor: pointer;
+}
